--- a/public/manifest.json
+++ b/public/manifest.json
@@ -16,6 +16,6 @@
   ],
   "start_url": ".",
   "display": "standalone",
-  "theme_color": "#ffffff",
+  "theme_color": "#FC8181",
   "background_color": "#ffffff"
 }
