--- a/capacitor.config.json
+++ b/capacitor.config.json
@@ -1,12 +1,16 @@
 {
-  "appId": "io.ionic.starter",
+  "appId": "com.rjose7.remainderzzz",
   "appName": "Remainder",
+  "linuxAndroidStudioPath": "/home/jose/.local/share/JetBrains/Toolbox/apps/AndroidStudio/ch-0/201.6953283/bin/studio.sh",
   "bundledWebRuntime": false,
   "npmClient": "yarn",
   "webDir": "build",
   "plugins": {
     "SplashScreen": {
       "launchShowDuration": 0
+    },
+    "PushNotifications": {
+      "presentationOptions": ["badge", "sound", "alert"]
     }
   },
   "cordova": {}
